<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/phone"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/phone"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:onClick="onRadioButtonClicked"/>
        
    <RadioButton android:id="@+id/url1"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/url"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:onClick="onRadioButtonClicked"/>
    
    
    <RadioButton android:id="@+id/mapmain"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/map"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:onClick="onRadioButtonClicked"/>
    
    <RadioButton android:id="@+id/sms"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/sms"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:onClick="onRadioButtonClicked"/>
    
    <RadioButton android:id="@+id/mailmain"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/mail"
        android:layout_gravity="center"
        android:onClick="onRadioButtonClicked"
        android:textSize="30sp"/>
    
    <RadioButton
        android:id="@+id/app"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:onClick="onRadioButtonClicked"
        android:text="app"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="560dp"
        android:layout_height="100dp"
        android:text="To write a task to a NFC tag, select the type of task to be written and follow the instructions to write to the tag."
        android:textSize="25sp" />
    
    <TextView 
        android:id="@+id/textView"
        android:layout_width="450dp"
        android:layout_height="90dp"
        android:text="Create great apps using the core of EasyNFC. Check it out at github.com/shravanj/easynfc-dev/"
        android:textSize="20sp" />
    
</RadioGroup>