<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/latitudetext"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    

</EditText>

    <TextView
        android:id="@+id/latitudetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/longitudeedittext"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="20sp" />

    <TextView
        android:id="@+id/longitudetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <Button
        android:id="@+id/mapwritebutton"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/write_to_tag" />

</LinearLayout>